fix: tags overflow for left side tags (#1348)
* fix: lower page header z-index for sidenav

* fix: tags only tip in visibilitypage header

* fix: tag overflow position

* fix: remove extra parameter

--- a/packages/cloud-cognitive/src/components/PageHeader/_page-header.scss
+++ b/packages/cloud-cognitive/src/components/PageHeader/_page-header.scss
@@ -30,6 +30,7 @@ $block-class: #{$pkg-prefix}--page-header;
 $breadcrumb-block-class: #{$pkg-prefix}--breadcrumb-with-overflow;
 
 $raised-z-index: 99;
+$z-index-header-minus: z('header') - 1;
 
 $left-section-std-width: 60%;
 $right-section-std-width: 100% - $left-section-std-width;
@@ -55,7 +56,7 @@ $right-section-alt-width: 100% - $left-section-alt-width;
       position: sticky;
       /* z-index used to raise above any position relative content as per Carbon header */
       /* dropped  1 below Carbon header so as not to overlay the side panel */
-      z-index: z('header') - 1;
+      z-index: $z-index-header-minus;
       top: var(--#{$block-class}--header-top);
       display: inline-block; /* cause top/bottom margin to reserve space */
       width: 100%;
@@ -569,6 +570,10 @@ $right-section-alt-width: 100% - $left-section-alt-width;
     position: var(--#{$block-class}--tagset-tooltip-position) !important;
     // stylelint-disable-next-line
     top: var(--#{$block-class}--tagset-tooltip-offset) !important;
+  }
+
+  .#{$block-class}__navigation-tags-overflow.#{$carbon-prefix}--tooltip {
+    z-index: $z-index-header-minus;
   }
 }
 
